--- a/styles/style.css
+++ b/styles/style.css
@@ -1,20 +1,46 @@
+* {
+    padding: 0px;
+    margin: 0px;
+}
+
 body {
     font-family: Arial, Helvetica, sans-serif;
     background-color: whitesmoke;
 }
 
-a {
-    color: black;
+header {
+    box-shadow: 3px 3px 3px rgba(0, 0, 0, 0.425);
 }
 
-header {
-    box-shadow: 3px 3px 3px black;
+header > img {
+    height: 50px;
+    width: 100px;
+}
+
+header > nav {
+    display: inline-flex;
+    float: inline-end;
+}
+
+nav > a {
+    color: black;
+    text-decoration: none;
+    padding: 16px 7px;
+}
+
+nav > a:hover {
+    color: blue;
+    border-bottom: 4px solid blue;
 }
 
 main {
     text-align: center;
 }
 
-main > section {
+main > section#intro {
+    margin: 200px 0px;
+}
+
+main > section#projetos {
     background-color: white;
 }
