--- a/styles/style.css
+++ b/styles/style.css
@@ -9,7 +9,7 @@ body {
 }
 
 header {
-    box-shadow: 3px 3px 3px rgba(0, 0, 0, 0.425);
+    box-shadow: 0px 3px 7px rgba(0, 0, 0, 0.322);
 }
 
 header > img {
@@ -43,4 +43,25 @@ main > section#intro {
 
 main > section#projetos {
     background-color: white;
+    padding: 50px;
+}
+
+section#projetos article {
+    background-color: whitesmoke;
+    padding: 20px;
+}
+
+section#projetos img {
+    display: block;
+    float: left;
+}
+
+footer {
+    background-color: black;
+    color: white;
+    text-align: center;
+}
+
+footer > p {
+    padding: 8px;
 }
