--- a/styles/style.css
+++ b/styles/style.css
@@ -80,13 +80,15 @@ section#projetos {
 section#projetos article {
     display: flex;
     align-items: center;
-    justify-content: space-between;
+    justify-content: space-around;
     flex-wrap: wrap;
     background-color: whitesmoke;
     margin: auto;
     min-width: 375px;
     max-width: 1000px;
     min-height: 200px;
+    border-radius: 10px;
+    padding: 25px;
 }
 
 article > img {
@@ -94,8 +96,38 @@ article > img {
     height: 200px;
 }
 
-article > aside {
+article aside {
     max-width: 500px;
+}
+
+aside h1 {
+    font-size: 1.3em;
+}
+
+aside p {
+    text-align: justify;
+    margin: 10px;
+}
+
+aside div {
+    display: inline-flex;
+}
+
+aside a {
+    display: inline-flex;
+    align-items: center;
+    background-color: rgba(255, 255, 255, 0.644);
+    color: black;
+    text-decoration: none;
+    font-weight: bold;
+    border-radius: 10px;
+    box-shadow: 3px 3px 7px rgba(0, 0, 0, 0.308);
+    margin: 5px;
+    padding: 3px;
+}
+
+.destaque {
+    font-weight: bold;
 }
 
 footer {
