--- a/styles/style-home.css
+++ b/styles/style-home.css
@@ -11,6 +11,7 @@ body {
 }
 
 header {
+    background-color: white;
     display: flex;
     align-items: center;
     justify-content: space-between;
