--- a/styles/style-sobre.css
+++ b/styles/style-sobre.css
@@ -8,6 +8,7 @@ main {
 main section {
     display: flex;
     flex-direction: column;
+    text-align: justify;
     padding: 12px 0;
     border-top: 1px solid rgba(128, 128, 128, .2);
 }
@@ -18,6 +19,11 @@ main a {
 
 section#certificados {
     text-align: center;
+}
+
+section#certificados h1 {
+    font-size: 2em;
+    text-align: justify;
 }
 
 section#certificados picture {
